--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,7 @@
 AUGMENTATION: True
-IMAGE_SIZE: [224, 224, 3] # as per VGG 16 model
+INPUT_SHAPE: [128, 128, 3]
 BATCH_SIZE: 16
 INCLUDE_TOP: False
 EPOCHS: 1
-CLASSES: 2
-WEIGHTS: imagenet
-LEARNING_RATE: 0.01
+CLASSES: 51
+LEARNING_RATE: 0.1
