Prepare Model Updated Code

--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,10 @@
 AUGMENTATION: True
-INPUT_SHAPE: [128, 128, 3]
+SEQUENCE_LENGTH: 50
+IMAGE_HEIGHT: 128
+IMAGE_WIDTH: 128 
 BATCH_SIZE: 16
 INCLUDE_TOP: False
-EPOCHS: 1
-CLASSES: 51
+EPOCHS: 100
+CLASSES: 4
+CLASSES_LIST: ["all", "computer", "before", "cool"]
 LEARNING_RATE: 0.1
