--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,12 +2,16 @@ artifacts_root: artifacts
 
 data_ingestion:
   json_file: deaf_sign_dataset.json
-  artifact_folder: artifacts
+  artifact_folder: artifacts/data_ingestion
   user_agent: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36"
   db_name: "college-project"
   db_host: "mongodb+srv://niral0901:d3gAL01dwlOnqmLQ@college-project.iwlsqpp.mongodb.net/"
 
 prepare_base_model:
+  dataset_dir: "artifacts/data_ingestion"
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
-  updated_base_model_path: artifacts/prepare_base_model/updated_base_model.h5
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
